--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Testing auto deploy Heroku Admin Page</p>
   </body>
 </html>
