--- a/main-page/views/Checkout.ejs
+++ b/main-page/views/Checkout.ejs
@@ -48,10 +48,10 @@
     <div class="aa-catg-head-banner-area">
      <div class="container">
       <div class="aa-catg-head-banner-content">
-        <h2>Checkout Page</h2>
+        <h2>THANH TOÁN</h2>
         <ol class="breadcrumb">
-          <li><a href="index.html">Home</a></li>                   
-          <li class="active">Checkout</li>
+          <li><a href="index.html">Trang chủ</a></li>                   
+          <li class="active">Thanh toán</li>
         </ol>
       </div>
      </div>
@@ -75,14 +75,14 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                            Have a Coupon?
+                            Bạn có Coupon?
                           </a>
                         </h4>
                       </div>
                       <div id="collapseOne" class="panel-collapse collapse in">
                         <div class="panel-body">
                           <input type="text" placeholder="Coupon Code" class="aa-coupon-code">
-                          <input type="submit" value="Apply Coupon" class="aa-browse-btn">
+                          <input type="submit" value="Áp dụng Coupon" class="aa-browse-btn">
                         </div>
                       </div>
                     </div>
@@ -91,7 +91,7 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                            Client Login 
+                            Đăng nhập 
                           </a>
                         </h4>
                       </div>
@@ -100,9 +100,9 @@
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat voluptatibus modi pariatur qui reprehenderit asperiores fugiat deleniti praesentium enim incidunt.</p>
                           <input type="text" placeholder="Username or email">
                           <input type="password" placeholder="Password">
-                          <button type="submit" class="aa-browse-btn">Login</button>
-                          <label for="rememberme"><input type="checkbox" id="rememberme"> Remember me </label>
-                          <p class="aa-lost-password"><a href="#">Lost your password?</a></p>
+                          <button type="submit" class="aa-browse-btn">Đăng nhập</button>
+                          <label for="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ </label>
+                          <p class="aa-lost-password"><a href="#">Quên mật khẩu?</a></p>
                         </div>
                       </div>
                     </div>
@@ -111,7 +111,7 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                            Billing Details
+                            Chi tiết đơn hàng
                           </a>
                         </h4>
                       </div>
@@ -120,38 +120,38 @@
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="First Name*">
+                                <input type="text" placeholder="Họ*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Last Name*">
+                                <input type="text" placeholder="Tên*">
                               </div>
                             </div>
                           </div> 
                           <div class="row">
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Company name">
+                                <input type="text" placeholder="Tên Công Ty">
                               </div>                             
                             </div>                            
                           </div>  
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="email" placeholder="Email Address*">
+                                <input type="email" placeholder="Địa chỉ Email*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="tel" placeholder="Phone*">
+                                <input type="tel" placeholder="Số điện thoại*">
                               </div>
                             </div>
                           </div> 
                           <div class="row">
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
-                                <textarea cols="8" rows="3">Address*</textarea>
+                                <textarea cols="8" rows="3">Ghi chú*</textarea>
                               </div>                             
                             </div>                            
                           </div>   
@@ -159,7 +159,7 @@
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
                                 <select>
-                                  <option value="0">Select Your Country</option>
+                                  <option value="0">Chọn quốc gia</option>
                                   <option value="1">Australia</option>
                                   <option value="2">Afganistan</option>
                                   <option value="3">Bangladesh</option>
@@ -183,19 +183,19 @@
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Appartment, Suite etc.">
+                                <input type="text" placeholder="Địa chỉ">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="City / Town*">
+                                <input type="text" placeholder="Thành phố/Thị trấn*">
                               </div>
                             </div>
                           </div>   
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="District*">
+                                <input type="text" placeholder="Huyện*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
@@ -221,38 +221,38 @@
                          <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="First Name*">
+                                <input type="text" placeholder="Họ*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Last Name*">
+                                <input type="text" placeholder="Tên*">
                               </div>
                             </div>
                           </div> 
                           <div class="row">
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Company name">
+                                <input type="text" placeholder="Tên Công Ty">
                               </div>                             
                             </div>                            
                           </div>  
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="email" placeholder="Email Address*">
+                                <input type="email" placeholder="Địa chỉ Email*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="tel" placeholder="Phone*">
+                                <input type="tel" placeholder="Số điện thoại*">
                               </div>
                             </div>
                           </div> 
                           <div class="row">
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
-                                <textarea cols="8" rows="3">Address*</textarea>
+                                <textarea cols="8" rows="3">Ghi chú*</textarea>
                               </div>                             
                             </div>                            
                           </div>   
@@ -260,7 +260,7 @@
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
                                 <select>
-                                  <option value="0">Select Your Country</option>
+                                  <option value="0">Chọn quốc gia</option>
                                   <option value="1">Australia</option>
                                   <option value="2">Afganistan</option>
                                   <option value="3">Bangladesh</option>
@@ -284,19 +284,19 @@
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="Appartment, Suite etc.">
+                                <input type="text" placeholder="Địa chỉ">
                               </div>                             
                             </div>
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="City / Town*">
+                                <input type="text" placeholder="Thành phố/Thị Trấn*">
                               </div>
                             </div>
                           </div>   
                           <div class="row">
                             <div class="col-md-6">
                               <div class="aa-checkout-single-bill">
-                                <input type="text" placeholder="District*">
+                                <input type="text" placeholder="Huyện*">
                               </div>                             
                             </div>
                             <div class="col-md-6">
@@ -308,7 +308,7 @@
                            <div class="row">
                             <div class="col-md-12">
                               <div class="aa-checkout-single-bill">
-                                <textarea cols="8" rows="3">Special Notes</textarea>
+                                <textarea cols="8" rows="3">Ghi chú</textarea>
                               </div>                             
                             </div>                            
                           </div>              
@@ -325,8 +325,8 @@
                     <table class="table table-responsive">
                       <thead>
                         <tr>
-                          <th>Product</th>
-                          <th>Total</th>
+                          <th>Sản phẩm</th>
+                          <th>Tổng</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -359,7 +359,7 @@
                       </tfoot>
                     </table>
                   </div>
-                  <h4>Payment Method</h4>
+                  <h4>Cách thức thanh toán</h4>
                   <div class="aa-payment-method">                    
                     <label for="cashdelivery"><input type="radio" id="cashdelivery" name="optionsRadios"> Cash on Delivery </label>
                     <label for="paypal"><input type="radio" id="paypal" name="optionsRadios" checked> Via Paypal </label>
