--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -73,9 +73,9 @@
               <!-- / header top left -->
               <div class="aa-header-top-right">
                 <ul class="aa-head-top-nav-right">
-                  <li><a href="account.html">My Account</a></li>
+                  <li><a href="MyAccount">My Account</a></li>
                   <li class="hidden-xs"><a href="wishlist.html">Wishlist</a></li>
-                  <li class="hidden-xs"><a href="cart.html">My Cart</a></li>
+                  <li class="hidden-xs"><a href="MyCart">My Cart</a></li>
                   <li class="hidden-xs"><a href="checkout.html">Checkout</a></li>
                   <li><a href="" data-toggle="modal" data-target="#login-modal">Login</a></li>
                 </ul>
@@ -138,7 +138,7 @@
                       </span>
                     </li>
                   </ul>
-                  <a class="aa-cartbox-checkout aa-primary-btn" href="checkout.html">Checkout</a>
+                  <a class="aa-cartbox-checkout aa-primary-btn" href="MyCart">Thanh toán</a>
                 </div>
               </div>
               <!-- / cart box -->
@@ -355,17 +355,17 @@
       <div class="modal-content">                      
         <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4>Login or Register</h4>
+          <h4>Đăng nhập/Đăng kí</h4>
           <form class="aa-login-form" action="">
-            <label for="">Username or Email address<span>*</span></label>
+            <label for="">Tài khoản hoặc Email<span>*</span></label>
             <input type="text" placeholder="Username or email">
-            <label for="">Password<span>*</span></label>
+            <label for="">Mật khẩu<span>*</span></label>
             <input type="password" placeholder="Password">
-            <button class="aa-browse-btn" type="submit">Login</button>
-            <label for="rememberme" class="rememberme"><input type="checkbox" id="rememberme"> Remember me </label>
-            <p class="aa-lost-password"><a href="#">Lost your password?</a></p>
+            <button class="aa-browse-btn" type="submit">Đăng nhập</button>
+            <label for="rememberme" class="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ </label>
+            <p class="aa-lost-password"><a href="#">Quên mật khẩu?</a></p>
             <div class="aa-register-now">
-              Don't have an account?<a href="account.html">Register now!</a>
+              Bạn chưa có tài khoản?<a href="account.html">Đăng kí ngay!</a>
             </div>
           </form>
         </div>                        
