--- a/main-page/views/AccountDetail.ejs
+++ b/main-page/views/AccountDetail.ejs
@@ -66,30 +66,25 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="aa-myaccount-login">
-                <h4>Đăng nhập</h4>
+                <h4>Thông tin cá nhân</h4>
                  <form action="" class="aa-login-form">
                   <label for="">Tên đăng nhập hoặc địa chỉ Email<span>*</span></label>
-                   <input type="text" placeholder="Username or email">
-                   <label for="">Mật khẩu<span>*</span></label>
+                   <input type="text" value="nguyen9999thien@gmail.com">
+                   <label for="">Họ và tên<span>*</span></label>
+                   <input type="text" value="Quân">
+                   <label for="">Địa chỉ<span>*</span></label>
+                   <input type="text" value="1 Nguyễn Du">
+                   <label for="">Mật khẩu hiện tại<span>*</span></label>
                     <input type="password" placeholder="Password">
-                    <button type="submit" class="aa-browse-btn">Đăng nhập</button>
-                    <label class="rememberme" for="rememberme"><input type="checkbox" id="rememberme"> Ghi nhớ </label>
-                    <p class="aa-lost-password"><a href="#" data-toggle="modal" data-target="#login-modal1">Quên mật khẩu?</a></p>
+                   <label for="">Thay đổi mật khẩu<span>*</span></label>
+                    <input type="password" placeholder="Password">
+                    <label for="">Nhập lại mật khẩu<span>*</span></label>
+                    <input type="password" placeholder="Password">
+                    <button type="submit" class="aa-browse-btn">Xác nhận</button>
                   </form>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="aa-myaccount-register">                 
-                 <h4>Đăng kí</h4>
-                 <form action="" class="aa-login-form">
-                    <label for="">Tên đăng nhập hoặc địa chỉ Email<span>*</span></label>
-                    <input type="text" placeholder="Username or email">
-                    <label for="">Mật khẩu<span>*</span></label>
-                    <input type="password" placeholder="Password">
-                    <button type="submit" class="aa-browse-btn">Đăng kí</button>                    
-                  </form>
                 </div>
-              </div>
+              
             </div>          
          </div>
        </div>
@@ -97,21 +92,5 @@
    </div>
  </section>
  <!-- / Cart view section -->
- <div class="modal fade" id="login-modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">                      
-        <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4>Xác minh tài khoản</h4>
-          <form class="aa-login-form" action="" height="50px">
-            <label for="">Tài khoản hoặc Email<span>*</span></label>
-            <input type="text" placeholder="Username or email">
-            
-          </form>
-          <button class="aa-browse-btn" type="submit">Xác minh</button>
-        </div>                        
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div> 
   </body>
 </html>
