[admin-page] edit required tag and preload iframe

--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -23,14 +23,14 @@
     <div class="container">
     <div class="col-md-4 col-md-offset-4" style="margin-top: 15%; background: #fff; padding: 20px;">
         <form class="form-signin" action="/main" method="POST">
-            <h2 class="form-signin-heading">Admin Panel</h2>
+            <h2 class="form-signin-heading">Trang Admin</h2>
             <div class="form-group">
-                <label for="username">User Name</label>
-                <input type="text" name="username" class="form-control" required autofocus placeholder="Domain">
+                <label for="username">Tên Đăng Nhập</label>
+                <input type="text" name="username" class="form-control" autofocus placeholder="Domain">
              </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" class="form-control" required placeholder="Password">
+                <label for="password">Mật Khẩu</label>
+                <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
             
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
