--- a/admin-page/views/main.ejs
+++ b/admin-page/views/main.ejs
@@ -6,6 +6,8 @@
   <title>Trang Admin</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="preload" href="http://chart-scttshop.herokuapp.com/public/dashboard/19a88397-0e3d-4483-b967-1488691ccf1d" as="document"
+ 
   <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
@@ -243,9 +245,10 @@
             <!-- /.box-header -->
             <div class="box-body">
               <div class="row">
+
                     <div class="col-md-10">
                                   <iframe
-                      src="http://chart-scttshop.herokuapp.com/public/dashboard/86368191-0782-41ce-ab71-462f098d33df"
+                      src="http://chart-scttshop.herokuapp.com/public/dashboard/19a88397-0e3d-4483-b967-1488691ccf1d"
                       frameborder="0"
                       style="width:120%;"
                       height="600"
