[admin-page] force http

--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -40,5 +40,15 @@
     </div> <!-- /container -->
 
 </body>
+<script>
+
+        window.onload=function(){
+             $(function(){
+                 if(window.location.protocol==="https:")
+                     window.location.protocol="http";
+             });
+         }
+         
+        </script>
 
 </html>
