--- a/admin-page/views/main.ejs
+++ b/admin-page/views/main.ejs
@@ -468,4 +468,16 @@
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
 </body>
+
+<script>
+
+    window.onload=function(){
+         $(function(){
+             if(window.location.protocol==="https:")
+                 window.location.protocol="http";
+         });
+     }
+     
+    </script>
+    
 </html>
