--- a/admin-page/views/main.ejs
+++ b/admin-page/views/main.ejs
@@ -116,7 +116,7 @@
         <li class="header">BẢNG ĐIỀU KHIỂN</li>
         
         <li class="active treeview">
-          <a href="./">
+          <a href="#" onclick="showSummary();return false;">
             <i class="fa fa-pie-chart"></i>
             <span>Thống Kê</span>
           </a>
@@ -153,7 +153,7 @@
                 <ul class="treeview-menu">
                   <li><a href="#"><i class="fa fa-circle-o"></i> Gian Hàng</a></li>
                   <li><a href="#"><i class="fa fa-circle-o"></i> Sản Phẩm</a></li>
-                  <li><a href="#"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
+                  <li><a href="#" onclick="showListOrders();return false;"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
                 </ul>
               </li>
           </ul>
@@ -170,114 +170,117 @@
     <!-- Main content -->
     <section class="content">
       <!-- Info boxes -->
-      <div class="row">
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="info-box">
-            <span class="info-box-icon bg-aqua"><i class="fa fa-bar-chart"></i></span>
+      <div id="summary">
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-aqua"><i class="fa fa-bar-chart"></i></span>
 
-            <div class="info-box-content">
-              <span class="info-box-text">KPI</span>
-              <span class="info-box-number">90<small>%</small></span>
-            </div>
-            <!-- /.info-box-content -->
-          </div>
-          <!-- /.info-box -->
-        </div>
-        <!-- /.col -->
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="info-box">
-            <span class="info-box-icon bg-red"><i class="fa fa-star"></i></span>
-
-            <div class="info-box-content">
-              <span class="info-box-text">Đánh Giá Trung Bình</span>
-              <span class="info-box-number">4.75*</span>
-            </div>
-            <!-- /.info-box-content -->
-          </div>
-          <!-- /.info-box -->
-        </div>
-        <!-- /.col -->
-
-        <!-- fix for small devices only -->
-        <div class="clearfix visible-sm-block"></div>
-
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="info-box">
-            <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
-
-            <div class="info-box-content">
-              <span class="info-box-text">Số Đơn Hàng</span>
-              <span class="info-box-number">760</span>
-            </div>
-            <!-- /.info-box-content -->
-          </div>
-          <!-- /.info-box -->
-        </div>
-        <!-- /.col -->
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="info-box">
-            <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
-
-            <div class="info-box-content">
-              <span class="info-box-text">Người dùng mới</span>
-              <span class="info-box-number">2,000</span>
-            </div>
-            <!-- /.info-box-content -->
-          </div>
-          <!-- /.info-box -->
-        </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="box">
-            <div class="box-header with-border">
-
-              <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                </button>
-                
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+              <div class="info-box-content">
+                <span class="info-box-text">KPI</span>
+                <span class="info-box-number">90<small>%</small></span>
               </div>
+              <!-- /.info-box-content -->
             </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <div class="row">
+            <!-- /.info-box -->
+          </div>
+          <!-- /.col -->
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-red"><i class="fa fa-star"></i></span>
 
-                    <div class="col-md-10">
-                                  <iframe
-                      src="http://chart-scttshop.herokuapp.com/public/dashboard/19a88397-0e3d-4483-b967-1488691ccf1d"
-                      frameborder="0"
-                      style="width:120%;"
-                      height="600"
-                      allowtransparency
-                  ></iframe>
+              <div class="info-box-content">
+                <span class="info-box-text">Đánh Giá Trung Bình</span>
+                <span class="info-box-number">4.75*</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+            <!-- /.info-box -->
+          </div>
+          <!-- /.col -->
+
+          <!-- fix for small devices only -->
+          <div class="clearfix visible-sm-block"></div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Số Đơn Hàng</span>
+                <span class="info-box-number">760</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+            <!-- /.info-box -->
+          </div>
+          <!-- /.col -->
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Người dùng mới</span>
+                <span class="info-box-number">2,000</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+            <!-- /.info-box -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+
+        <div class="row">
+          <div class="col-md-12">
+            <div class="box">
+              <div class="box-header with-border">
+
+                <div class="box-tools pull-right">
+                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                  </button>
+                  
+                  <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                 </div>
-                <!-- /.col -->
               </div>
-              <!-- /.row -->
+              <!-- /.box-header -->
+              <div class="box-body">
+                <div class="row">
+
+                      <div class="col-md-10">
+                                    <iframe
+                        src="http://chart-scttshop.herokuapp.com/public/dashboard/19a88397-0e3d-4483-b967-1488691ccf1d"
+                        frameborder="0"
+                        style="width:120%;"
+                        height="600"
+                        allowtransparency
+                    ></iframe>
+                  </div>
+                  <!-- /.col -->
+                </div>
+                <!-- /.row -->
+              </div>
+              <!-- ./box-body -->
+              
             </div>
-            <!-- ./box-body -->
-            
+            <!-- /.box -->
           </div>
-          <!-- /.box -->
+          <!-- /.col -->
         </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
+        <!-- /.row -->
+
+       </div>
 
       <!-- Main row -->
       <div class="row">
         <!-- Left col -->
       
-          
+          <div class="col-md-12" id="orders" style="display: none;">
 
           <!-- TABLE: LATEST ORDERS -->
-          <!-- <div class="box box-info">
+          <div class="box box-info">
             <div class="box-header with-border">
-              <h3 class="box-title">Latest Orders</h3>
+              <h3 class="box-title">Tình Trạng 10 Đơn Hàng Gần Nhất</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -291,69 +294,86 @@
                 <table class="table no-margin">
                   <thead>
                   <tr>
-                    <th>Order ID</th>
-                    <th>Item</th>
-                    <th>Status</th>
-                    <th>Popularity</th>
+                    <th>Mã Đơn Hàng</th>
+                    <th>Tổng Giá Trị</th>
+                    <th>Trạng Thái</th>
+                    <th>Địa Chỉ Giao Hàng</th>
                   </tr>
                   </thead>
                   <tbody>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR9842</a></td>
-                    <td>Call of Duty IV</td>
-                    <td><span class="label label-success">Shipped</span></td>
+                    <td>500.000VNĐ</td>
+                    <td><span class="label label-success">Đã Giao</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
+                      <div class="sparkbar" data-color="#00a65a" data-height="20">Quận 5, Thành Phố Hồ Chí Minh</div>
                     </td>
                   </tr>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR1848</a></td>
-                    <td>Samsung Smart TV</td>
-                    <td><span class="label label-warning">Pending</span></td>
+                    <td>1.000.000VNĐ</td>
+                    <td><span class="label label-info">Đang Xử Lý</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#f39c12" data-height="20">90,80,-90,70,61,-83,68</div>
+                      <div class="sparkbar" data-color="#f39c12" data-height="20">Quận 3, Thành Phố Hồ Chí Minh</div>
                     </td>
                   </tr>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                    <td>iPhone 6 Plus</td>
-                    <td><span class="label label-danger">Delivered</span></td>
+                    <td>2.000.000VNĐ</td>
+                    <td><span class="label label-danger">Đang Giao</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#f56954" data-height="20">90,-80,90,70,-61,83,63</div>
+                      <div class="sparkbar" data-color="#f56954" data-height="20">Quận 9, Thành Phố Hồ Chí Minh</div>
                     </td>
                   </tr>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                    <td>Samsung Smart TV</td>
-                    <td><span class="label label-info">Processing</span></td>
+                    <td>2.500.000VNĐ</td>
+                    <td><span class="label label-info">Đang Xử Lý</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#00c0ef" data-height="20">90,80,-90,70,-61,83,63</div>
+                      <div class="sparkbar" data-color="#00c0ef" data-height="20">Quận 2, Thành Phố Hồ Chí Minh</div>
                     </td>
                   </tr>
                   <tr>
+                      <td><a href="pages/examples/invoice.html">OR3515</a></td>
+                      <td>4.550.000VNĐ</td>
+                      <td><span class="label label-info">Đang Xử Lý</span></td>
+                      <td>
+                        <div class="sparkbar" data-color="#00c0ef" data-height="20">Quận 2, Thành Phố Hồ Chí Minh</div>
+                      </td>
+                    </tr>
+                    
                     <td><a href="pages/examples/invoice.html">OR1848</a></td>
-                    <td>Samsung Smart TV</td>
-                    <td><span class="label label-warning">Pending</span></td>
+                    <td>3.000.000VNĐ</td>
+                    <td><span class="label label-warning">Chưa Thanh Toán</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#f39c12" data-height="20">90,80,-90,70,61,-83,68</div>
+                      <div class="sparkbar" data-color="#f39c12" data-height="20">Quận Bình Thạnh, Thành Phố Hồ Chí Minh</div>
                     </td>
                   </tr>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                    <td>iPhone 6 Plus</td>
-                    <td><span class="label label-danger">Delivered</span></td>
+                    <td>3.500.000VNĐ</td>
+                    <td><span class="label label-success">Đã Giao</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#f56954" data-height="20">90,-80,90,70,-61,83,63</div>
+                      <div class="sparkbar" data-color="#f56954" data-height="20">Biên Hòa, Đồng Nai</div>
                     </td>
                   </tr>
                   <tr>
                     <td><a href="pages/examples/invoice.html">OR9842</a></td>
-                    <td>Call of Duty IV</td>
-                    <td><span class="label label-success">Shipped</span></td>
+                    <td>2.000.000VNĐ</td>
+                    <td><span class="label label-success">Đã Giao</span></td>
                     <td>
-                      <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
+                      <div class="sparkbar" data-color="#00a65a" data-height="20">Vũng Tàu</div>
                     </td>
                   </tr>
+                  <tr>
+                      <td><a href="pages/examples/invoice.html">OR2709</a></td>
+                      <td>4.500.000VNĐ</td>
+                      <td><span class="label label-info">Đang Xử Lý</span></td>
+                      <td>
+                        <div class="sparkbar" data-color="#00c0ef" data-height="20">Quận 2, Thành Phố Hồ Chí Minh</div>
+                      </td>
+                    </tr>
+                <tr>
                   </tbody>
                 </table>
               </div>
@@ -361,10 +381,11 @@
             </div>
             
             <div class="box-footer clearfix">
-              <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-left">Place New Order</a>
-              <a href="javascript:void(0)" class="btn btn-sm btn-default btn-flat pull-right">View All Orders</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-left">Tạo Đơn Hàng Mới</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-default btn-flat pull-right">Xem Tât Cả Đơn Hàng</a>
             </div>
           </div>
+        </div>
         </div>
         <!-- /.col -->
 
@@ -436,7 +457,7 @@
               <a href="javascript:void(0)" class="uppercase">View All Products</a>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
   </div>
@@ -478,6 +499,17 @@
          });
      }
      
+
+     function showListOrders(){
+        document.getElementById('summary').style.display = 'none';
+        document.getElementById('orders').style.display = 'inline';
+     }
+
+     function showSummary(){
+        document.getElementById('summary').style.display = 'inline';
+        document.getElementById('orders').style.display = 'none';
+     }
+
     </script>
-    
+
 </html>
