--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -73,12 +73,10 @@
               <!-- / header top left -->
               <div class="aa-header-top-right">
                 <ul class="aa-head-top-nav-right">
-                  <li><a href="AccountDetail">My Account</a></li>
-                  <li class="hidden-xs"><a href="wishlist.html">Wishlist</a></li>
-                  <li class="hidden-xs"><a href="MyCart">My Cart</a></li>
-                  <li class="hidden-xs"><a href="checkout.html">Checkout</a></li>
-                  <li><a href="" data-toggle="modal" data-target="#login-modal">Login</a></li>
-
+                  <li><a href="AccountDetail">Tài khoản</a></li>
+                  <li class="hidden-xs"><a href="MyCart">Giỏ đồ</a></li>
+                  <li class="hidden-xs"><a href="Checkout">Thanh toán</a></li>
+                  <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li>
                 </ul>
               </div>
             </div>
@@ -186,7 +184,7 @@
                   <li><a href="#">Áo thun Adachi</a></li>                                                
                 </ul>
               </li>
-              <li><a href="#">Áo khoác <span class="caret"></span></a>
+              <li><a href="/Aokhoac">Áo khoác <span class="caret"></span></a>
                 <ul class="dropdown-menu">  
                         <li><a href="#">Áo khoác MaBư</a></li>
                         <li><a href="#">Áo khoác No Style</a></li>
