Edit header layout.ejs

--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -66,18 +66,17 @@
                 
                 <!-- start cellphone -->
                 <div class="cellphone hidden-xs">
-                  <p><span class="fa fa-phone"></span>00-62-658-658</p>
+                  <p><span class="fa fa-phone"></span>(028) 7307 1441</p>
                 </div>
                 <!-- / cellphone -->
               </div>
               <!-- / header top left -->
               <div class="aa-header-top-right">
                 <ul class="aa-head-top-nav-right">
-                  <li><a href="AccountDetail">My Account</a></li>
-                  <li class="hidden-xs"><a href="wishlist.html">Wishlist</a></li>
-                  <li class="hidden-xs"><a href="MyCart">My Cart</a></li>
-                  <li class="hidden-xs"><a href="checkout.html">Checkout</a></li>
-                  <li><a href="" data-toggle="modal" data-target="#login-modal">Login</a></li>
+                  <li><a href="AccountDetail">Tài khoản của tôi</a></li>
+                  <li class="hidden-xs"><a href="MyCart">Giỏ hàng</a></li>
+                  <li class="hidden-xs"><a href="checkout.html">Thanh toán</a></li>
+                  <li><a href="" data-toggle="modal" data-target="#login-modal">Đăng nhập</a></li>
 
                 </ul>
               </div>
@@ -270,7 +269,7 @@
                 <div class="aa-footer-widget">
                   <h3>Thông tin</h3>
                   <ul class="aa-footer-nav">
-                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="/">Trang chủ</a></li>
                     <li><a href="#">Giới thiệu</a></li>
                     <li><a href="#">Sản phẩm</a></li>
                     <li><a href="#">Điều khoản mua bán</a></li>
