Create ORder Detail

--- a/main-page/views/Customer-Orders.ejs
+++ b/main-page/views/Customer-Orders.ejs
@@ -21,7 +21,7 @@
                             <td>300.000 VNĐ</td>
                             <td><span class="label label-info">Đã sẵn sàng</span>
                             </td>
-                            <td><a href="Customer-Orders" class="aa-add-card-btn">View</a>
+                            <td><a href="OrderDetail" class="aa-add-card-btn">Chi tiết</a>
                             </td>
                         </tr>
                         <tr>
@@ -30,7 +30,7 @@
                             <td>300.000 VNĐ</td>
                             <td><span class="label label-info">Đã sẵn sàng</span>
                             </td>
-                            <td><a href="Customer-Orders" class="aa-add-card-btn">View</a>
+                            <td><a href="OrderDetail" class="aa-add-card-btn">Chi tiết</a>
                             </td>
                         </tr>
                         <tr>
@@ -39,7 +39,7 @@
                             <td>450.000VNĐ</td>
                             <td><span class="label label-success">Hoàn thành</span>
                             </td>
-                            <td><a href="Customer-Orders" class="aa-add-card-btn">View</a>
+                            <td><a href="OrderDetail" class="aa-add-card-btn">Chi tiết</a>
                             </td>
                         </tr>
                         <tr>
@@ -48,7 +48,7 @@
                             <td> 150.000VNĐ</td>
                             <td><span class="label label-danger">Hủy</span>
                             </td>
-                            <td><a href="Customer-Orders" class="aa-add-card-btn">View</a>
+                            <td><a href="OrderDetail" class="aa-add-card-btn">Chi tiết</a>
                             </td>
                         </tr>
                         <tr>
@@ -57,7 +57,7 @@
                             <td>50.000VNĐ</td>
                             <td><span class="label label-warning">Nháp</span>
                             </td>
-                            <td><a href="Customer-Orders" class="aa-add-card-btn">View</a>
+                            <td><a href="OrderDetail" class="aa-add-card-btn">Chi tiết</a>
                             </td>
                         </tr>
                     </tbody>
