--- a/main-page/views/Checkout.ejs
+++ b/main-page/views/Checkout.ejs
@@ -97,7 +97,6 @@
                       </div>
                       <div id="collapseTwo" class="panel-collapse collapse">
                         <div class="panel-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat voluptatibus modi pariatur qui reprehenderit asperiores fugiat deleniti praesentium enim incidunt.</p>
                           <input type="text" placeholder="Username or email">
                           <input type="password" placeholder="Password">
                           <button type="submit" class="aa-browse-btn">Đăng nhập</button>
@@ -212,7 +211,7 @@
                       <div class="panel-heading">
                         <h4 class="panel-title">
                           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                            Shippping Address
+                            Địa Chỉ Giao Hàng
                           </a>
                         </h4>
                       </div>
@@ -320,7 +319,7 @@
               </div>
               <div class="col-md-4">
                 <div class="checkout-right">
-                  <h4>Order Summary</h4>
+                  <h4>Chi Tiết Hóa Đơn</h4>
                   <div class="aa-order-summary-area">
                     <table class="table table-responsive">
                       <thead>
@@ -345,15 +344,15 @@
                       </tbody>
                       <tfoot>
                         <tr>
-                          <th>Subtotal</th>
+                          <th>Tạm Tính</th>
                           <td>$750</td>
                         </tr>
                          <tr>
-                          <th>Tax</th>
+                          <th>Thuế</th>
                           <td>$35</td>
                         </tr>
                          <tr>
-                          <th>Total</th>
+                          <th>Tổng</th>
                           <td>$785</td>
                         </tr>
                       </tfoot>
@@ -361,8 +360,8 @@
                   </div>
                   <h4>Cách thức thanh toán</h4>
                   <div class="aa-payment-method">                    
-                    <label for="cashdelivery"><input type="radio" id="cashdelivery" name="optionsRadios"> Cash on Delivery </label>
-                    <label for="paypal"><input type="radio" id="paypal" name="optionsRadios" checked> Via Paypal </label>
+                    <label for="cashdelivery"><input type="radio" id="cashdelivery" name="optionsRadios"> Tiền Mặt </label>
+                    <label for="paypal"><input type="radio" id="paypal" name="optionsRadios" checked> Paypal </label>
                     <img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">    
                     <input type="submit" value="Place Order" class="aa-browse-btn">                
                   </div>
