[admin-page] edit route main to chart

--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
     <div class="col-md-4 col-md-offset-4" style="margin-top: 15%; background: #fff; padding: 20px;">
-        <form class="form-signin" action="/main" method="POST">
+        <form class="form-signin" action="/chart" method="POST">
             <h2 class="form-signin-heading">Trang Admin</h2>
             <div class="form-group">
                 <label for="username">Tên Đăng Nhập</label>
