[admin-page] fix bug wrong include path

--- a/admin-page/views/layouts/chart.ejs
+++ b/admin-page/views/layouts/chart.ejs
@@ -28,8 +28,8 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
-  <% include ..\common\header%>
-  <% include ..\common\sidebar%>
+  <% include ../common/header%>
+  <% include ../common/sidebar%>
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
@@ -142,7 +142,7 @@
    
   </div>
 
-  <%include ..\common\script%>
+  <%include ../common/script%>
 
   
 
